--- a/index.html
+++ b/index.html
@@ -1,8 +1,64 @@
 <html lang="en">
 <head>
 <title>blah></title>
+<style>
+span {
+	font-family: monospace;
+	font-size: 2em;
+}
+span:after {
+	content:"_";
+	opacity: 0;
+	animation: cursor 1s infinite;
+}
+@keyframes cursor {
+	0% {
+		opacity: 0;
+	}
+	40% {
+		opacity: 0;
+	}
+	50% {
+		opacity: 1;
+	}
+	90% {
+		opacity: 1;
+	}
+	100% {
+		opacity: 0;
+	}
+}
+/* styling */
+ html {
+	width: 100%;
+	height: 100%;
+	background: radial-gradient(circle, #fff 0%, #aaa 100%) no-repeat;
+	overflow-x: hidden;
+	overflow-y: hidden;
+}
+body {
+	text-align: center;
+	display: table;
+	width: 100%;
+	height: 100%;
+	overflow-x: hidden;
+	overflow-y: hidden;
+}
+#wrap {
+	box-sizing: border-box;
+	display: table-cell;
+	vertical-align: middle;
+}
+
+
+</style>
 </head>
 <body>
- <h3>hey</h3>
+
+<div id="wrap">
+  <span>mom@codes$ </span>
+</div>
+
+
 </body>
 </html>
